@@ -32,6 +32,7 @@ This documentation is probably only useful to OpenGuides developers.
       preview_above_edit_box => 1,
       latlong_traditional    => 1,
       omit_formatting_link   => 1,
+      show_minor_edits_in_rc => 1,
   );
 
   my $wiki = OpenGuides::Utils->make_wiki_object( config => $config );
@@ -59,6 +60,7 @@ This documentation is probably only useful to OpenGuides developers.
       preview_above_edit_box => 1,
       latlong_traditional    => 1,
       omit_formatting_link   => 1,
+      show_minor_edits_in_rc => 1,
   );
 
 Croaks unless a L<Config::Tiny> object is supplied as C<config>.
@@ -73,11 +75,12 @@ sub make_prefs_cookie {
     my $cookie_name = $class->_get_cookie_name( config => $config );
     my $cookie = CGI::Cookie->new(
         -name  => $cookie_name,
-	-value => { user   => $args{username},
-		    gclink => $args{include_geocache_link},
-                    prevab => $args{preview_above_edit_box},
-                    lltrad => $args{latlong_traditional},
+	-value => { user      => $args{username},
+		    gclink    => $args{include_geocache_link},
+                    prevab    => $args{preview_above_edit_box},
+                    lltrad    => $args{latlong_traditional},
                     omitfmtlk => $args{omit_formatting_link},
+                    rcmined   => $args{show_minor_edits_in_rc},
                   },
         -expires => "+1M",
     );
@@ -111,6 +114,7 @@ sub get_prefs_from_cookie {
              preview_above_edit_box => $data{prevab}    || 0,
              latlong_traditional    => $data{lltrad}    || 0,
              omit_formatting_link   => $data{omitfmtlk} || 0,
+             show_minor_edits_in_rc => $data{rcmined}   || 0,
            );
 }
 
