@@ -26,13 +26,15 @@ sub set_preferences {
     my $pre_above    = $cgi->param("preview_above_edit_box") || 0;
     my $latlong_trad = $cgi->param("latlong_traditional")    || 0;
     my $omit_fmt_lnk = $cgi->param("omit_formatting_link")   || 0;
+    my $rc_minor_eds = $cgi->param("show_minor_edits_in_rc") || 0;
     my $cookie = OpenGuides::CGI->make_prefs_cookie(
         config => $config,
         username => $username,
-        include_geocache_link => $gc_link,
+        include_geocache_link  => $gc_link,
 	preview_above_edit_box => $pre_above,
-        latlong_traditional => $latlong_trad,
-        omit_formatting_link => $omit_fmt_lnk,
+        latlong_traditional    => $latlong_trad,
+        omit_formatting_link   => $omit_fmt_lnk,
+        show_minor_edits_in_rc => $rc_minor_eds,
     );
     print OpenGuides::Template->output(
         wiki     => $wiki,
@@ -44,7 +46,8 @@ sub set_preferences {
                       include_geocache_link  => $gc_link,
                       preview_above_edit_box => $pre_above,
                       latlong_traditional    => $latlong_trad,
-                      omit_formatting_link   => $omit_fmt_lnk
+                      omit_formatting_link   => $omit_fmt_lnk,
+                      show_minor_edits_in_rc => $rc_minor_eds,
                     }
     );
 }
