@@ -59,6 +59,15 @@
       </p>
     [% END %]
 
+    <p>
+    [% IF show_minor_edits_in_rc %]
+      <input type="checkbox" name="show_minor_edits_in_rc" value="1" checked />
+    [% ELSE %]
+      <input type="checkbox" name="show_minor_edits_in_rc" value="1" />
+    [% END %]
+    Include &#8220;minor edits&#8221; in Recent Changes.
+    </p>
+
     <input type="submit" value="Set it" class="form_button" />
     <input type="hidden" name="action" value="set_preferences">
   </form>
@@ -94,6 +103,10 @@
       [% IF omit_formatting_link %] not [% END %]
     included in navbar</p>
   [% END %]
+
+  <p>Minor edits
+    [% UNLESS show_minor_edits_in_rc %] not [% END %]
+  included in Recent Changes.</p>
 
   <p><a href="[% full_cgi_url %]">Return to the wiki</a></p>
 
